Add inference_metadata_fields capability